syntax = "proto3";
package carkot;

//session up request is empty. only URL
message SessionUpResponse {
    int32 code = 1;
    int32 sid = 3;
}

message SessionDownResponse {
    int32 code = 1;
}

message SessionDownRequest {
    int32 sid = 1;
}

message HeartBeatRequest {
    int32 sid = 1;
}

message HeartBeatResponse {
    int32 code = 1;
}
